# esp32-matter-sensor-test

./: .gitignore  .gitignore.swp  .gitmodules  CMakeLists.txt  Doxyfile  README.md  sdkconfig
docs/html/: annotated.html  app__driver_8cpp.html  app__main_8cpp.html  app__priv_8h.html  app__priv_8h_source.html  bh1750_8c.html  bh1750_8h.html  bh1750_8h_source.html  classconftest_1_1_idf_pytest_embedded-members.html  classconftest_1_1_idf_pytest_embedded.html  classes.html  dir_393c12b1187466e9dc2440b28ed43d20.html  dir_4dfcd94840a21a56e04d684774c0e445.html  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_697c250de82c51cff6ac171078458d7b.html  dir_ba9534ffd14ff7c839afb8a952ccb48d.html  dir_f9b1ee83c469a58bdd0879bac8f0b7d2.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  group__bh1750.html  group__i2cdev.html  group__scd30.html  i2cdev_8c.html  i2cdev_8h.html  i2cdev_8h_source.html  index.html  md_esp_idf__c_o_n_t_r_i_b_u_t_i_n_g.html  md_esp_idf__r_e_a_d_m_e__c_n.html  md_esp_idf__s_e_c_u_r_i_t_y.html  md_esp_idf__s_u_p_p_o_r_t__p_o_l_i_c_y.html  md_esp_idf__s_u_p_p_o_r_t__p_o_l_i_c_y__c_n.html  menudata.js  (+14 more)
docs/latex/: annotated.tex  app__driver_8cpp.tex  app__main_8cpp.tex  app__priv_8h.tex  app__priv_8h_source.tex  bh1750_8c.tex  bh1750_8h.tex  bh1750_8h_source.tex  classconftest_1_1_idf_pytest_embedded.tex  files.tex  (+22 more)
main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_priv.h
main/bmp280/: bmp280.h
main/i2cdev/: i2cdev.h
(+41 files in other folders)
